// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot with answer 1`] = `
<div>
  <section
    role="form"
  >
    <form
      class="mb--0 mt--e"
    >
      <div
        class="form__group form__group--textarea mb--b"
      >
        <label
          class="form__label visually-hidden"
          for="string"
        />
        <textarea
          class="form__input form__input--textarea"
          data-hj-whitelist="true"
          data-qa-sel="Comment-text-area"
          id="string"
        >
          some answer text that's been updated
        </textarea>
      </div>
      <span
        class="ml--0 mb--0 CommentBox__savedIndicator"
      >
        Saved
      </span>
      <button
        class="btn mr--0 mb--0 right"
        data-qa-sel="delete-comment-button"
      >
        Delete
      </button>
    </form>
  </section>
</div>
`;

exports[`should match snapshot without answer 1`] = `
<div>
  <section
    role="form"
  >
    <form
      class="mb--0 mt--e"
    >
      <div
        class="form__group form__group--textarea mb--b"
      >
        <label
          class="form__label visually-hidden"
          for="string"
        />
        <textarea
          class="form__input form__input--textarea"
          data-hj-whitelist="true"
          data-qa-sel="Comment-text-area"
          id="string"
        />
      </div>
      <span
        class="ml--0 mb--0 CommentBox__savedIndicator"
      >
        Saved
      </span>
    </form>
  </section>
</div>
`;
